k8s/apps/graphhopper/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphhopper
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: graphhopper
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
